[package]
name = "linked-hash-map-rs"
version = "0.1.1"
edition = "2018"
authors = ["soeur <juzi201314@gmail.com>"]
description = "A linked list hash map."
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ahash = "0.7.4"
linked-hash-map = "0.5.4"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
